Improve search performance